Fixed CSS filename and paths

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>404 - Page Not Found | JJ-Energy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link href="/assets\css\jj e.css" rel="stylesheet" />
+    <link href="/assets/css/jj-e.css" rel="stylesheet" />
     <style>
         .error-section {
             display: flex; flex-direction: column; align-items: center;
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="error-section">
-        <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" width="200" alt="JJ-Energy Logo">
+        <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" width="200" alt="JJ-Energy Logo">
         
         <br>
         <h1 class="error-heading">404</h1>
