--- a/about us.html
+++ b/about us.html
@@ -8,7 +8,7 @@
         
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
       
-        <link href="assets\css\jj e.css" rel="stylesheet" type="text/css"/>
+        <link href="assets/css/jj-e.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-K8LWb4/i3eVz+F12eIg45CzLjKwx0lBZpXfm2lDi0XjrxEIPQ93dzZxPP8kOVVCXpdy8E0Og+fWpIVa/ve1gUpA==" crossorigin="anonymous" />
         <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
         <style>
@@ -37,7 +37,7 @@
                         <div class="navbar-left-content">
                             <div class="navbar-logo-wrapper">
                                 <a href="index.html" class="logo-link-block w-nav-brand">
-                                    <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="" class="navbar-logo"/>
+                                    <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="" class="navbar-logo"/>
                                 </a>
                             </div>
                         </div>
@@ -101,46 +101,46 @@
                         <div class="w-layout-grid about-story-image-grid">
                             <div id="w-node-_862f2042-a8ab-e06b-40ff-597c41a41077-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper mb20">
-                                    <img src="assets\imgs\d8cb8588-9bf9-4d35-8b4a-8a258cab043d-removebg-preview.png4753efa0-b8e2-461f-93e4-36a3d8c9097e.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/d8cb8588-9bf9-4d35-8b4a-8a258cab043d-removebg-preview.png4753efa0-b8e2-461f-93e4-36a3d8c9097e.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\bd9a20d4-16b3-448f-8d57-c137c17fc140.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/bd9a20d4-16b3-448f-8d57-c137c17fc140.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                             </div>
                             <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\38dc19b4-3eac-49da-8d13-e32043da166c.jpg" loading="lazy" srcset="assets\imgs\38dc19b4-3eac-49da-8d13-e32043da166c-p-500.jpg 500w, assets\imgs\38dc19b4-3eac-49da-8d13-e32043da166c.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
+                                    <img src="assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c.jpg" loading="lazy" srcset="assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c-p-500.jpg 500w, assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
                                 </div>
                             </div>
                             <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper mb20">
-                                    <img src="assets\imgs\trucks.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/trucks.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\940f5090-c1bd-4689-8908-74f19b14428a.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/940f5090-c1bd-4689-8908-74f19b14428a.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                             </div>
                         </div>
                         <div class="w-layout-grid about-story-image-grid">
                             <div id="w-node-_862f2042-a8ab-e06b-40ff-597c41a41077-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper mb20">
-                                    <img src="assets\imgs\d8cb8588-9bf9-4d35-8b4a-8a258cab043d.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/d8cb8588-9bf9-4d35-8b4a-8a258cab043d.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\4ce5075f-70f3-4b39-9709-4b998930808f.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/4ce5075f-70f3-4b39-9709-4b998930808f.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                             </div>
                             <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets\imgs\a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets\imgs\a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
+                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
                                 </div>
                             </div>
                             <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper mb20">
-                                    <img src="assets\imgs\8fdd60cb-6ab3-4a50-86a5-681ef16f5fca.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/8fdd60cb-6ab3-4a50-86a5-681ef16f5fca.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets\imgs\8905aa5a-76eb-412f-81cc-8450f47d07ef.jpg" loading="lazy" alt="" class="about-story-image"/>
+                                    <img src="assets/imgs/8905aa5a-76eb-412f-81cc-8450f47d07ef.jpg" loading="lazy" alt="" class="about-story-image"/>
                                 </div>
                             </div>
                         </div>
@@ -174,10 +174,10 @@
                         <div class="our-mission-left-content">
                             <div class="our-mission-image-wrapper">
                                 <div class="our-mission-singel-image">
-                                    <img src="assets\imgs\imageedit_4_8791190317.png" loading="lazy" alt="" class="our-mission-image"/>
+                                    <img src="assets/imgs/imageedit_4_8791190317.png" loading="lazy" alt="" class="our-mission-image"/>
                                 </div>
-                                <img src="assets\imgs\8905aa5a-76eb-412f-81cc-8450f47d07ef.jpg" loading="lazy" style="opacity:0" data-w-id="620851fd-a82b-a49c-397f-8f1f7a5c8b78" alt="" class="our-mission-small-image-one"/>
-                                <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" style="opacity:0" data-w-id="8e8dc553-e275-b710-a028-809124ef7c13" alt="" class="our-mission-small-image-two"/>
+                                <img src="assets/imgs/8905aa5a-76eb-412f-81cc-8450f47d07ef.jpg" loading="lazy" style="opacity:0" data-w-id="620851fd-a82b-a49c-397f-8f1f7a5c8b78" alt="" class="our-mission-small-image-one"/>
+                                <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" style="opacity:0" data-w-id="8e8dc553-e275-b710-a028-809124ef7c13" alt="" class="our-mission-small-image-two"/>
                             </div>
                         </div>
                         <div class="our-mission-right-content">
@@ -210,7 +210,7 @@
                     <div class="container">
                         <div class="footer-singel-wrapper mobile">
                             <a href="index.html" class="footer-logo-wrapper w-inline-block">
-                                <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="" class="footer-logo-image"/>
+                                <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="" class="footer-logo-image"/>
                             </a>
                             <h3 class="footer-menu-title">Want Fuel? – Contact Us Now! – <br>010 125 0325</h3>
                         </div>
@@ -218,7 +218,7 @@
                             <div id="w-node-ce3ac878-4691-d40f-b2f4-f85b2ab9dd00-2ab9dcfc" class="footer-singel-wrapper desktop">
                                 <a href="/" class="footer-logo-wrapper w-inline-block">
                                     <div class="overflow-hidden">
-                                        <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" data-w-id="ce3ac878-4691-d40f-b2f4-f85b2ab9dd02" alt="" class="footer-logo-image"/>
+                                        <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" data-w-id="ce3ac878-4691-d40f-b2f4-f85b2ab9dd02" alt="" class="footer-logo-image"/>
                                     </div>
                                 </a>
                                 <div class="overflow-hidden">
