--- a/contact us.html
+++ b/contact us.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Contact JJ-Energy for reliable fuel supply and logistics in Alberton." />
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         
-        <link href="assets\css\jj e.css" rel="stylesheet" type="text/css"/>
+        <link href="assets/css/jj-e.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         
         <script src="https://forminit.com/sdk/v1/forminit.js"></script>
@@ -55,7 +55,7 @@
                     <div class="navbar-wrapper">
                         <div class="navbar-left-content">
                             <a href="index.html" class="logo-link-block w-nav-brand">
-                                <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy Logo" class="navbar-logo"/>
+                                <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy Logo" class="navbar-logo"/>
                             </a>
                         </div>
                         <div class="navbar-right-content">
@@ -95,7 +95,7 @@
                     <div class="contact-us-wrapper">
                         <div class="w-layout-grid contact-us-grid">
                             <div class="contact-us-image-wrapper">
-                                <img src="assets\imgs\snow.jpg" loading="lazy" alt="Fuel Services" class="contact-us-image"/>
+                                <img src="assets/imgs/snow.jpg" loading="lazy" alt="Fuel Services" class="contact-us-image"/>
                             </div>
                             <div class="contact-us-form-wrapper">
                                 <div class="contact-form-container">
@@ -131,7 +131,7 @@
                     <div class="container">
                         <div class="footer-singel-wrapper mobile">
                             <a href="index.html" class="footer-logo-wrapper w-inline-block">
-                                <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy" class="footer-logo-image"/>
+                                <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy" class="footer-logo-image"/>
                             </a>
                             <h3 class="footer-menu-title">Want Fuel? – Contact Us Now! – <br><div class="footer-contact-text mb15"><a href="tel:0101250325" style="text-decoration: none; color: inherit;">010 125 0325</a></div>
                                    </h3>
@@ -139,7 +139,7 @@
                         <div class="w-layout-grid footer-grid">
                             <div class="footer-singel-wrapper desktop">
                                 <a href="index.html" class="footer-logo-wrapper w-inline-block">
-                                    <img src="assets\imgs\d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy" class="footer-logo-image"/>
+                                    <img src="assets/imgs/d9aef6a1-20a1-4cc6-bb5e-8e4a356dd4b9-removebg-preview.png" loading="lazy" alt="JJ-Energy" class="footer-logo-image"/>
                                 </a>
                                 <h3 class="footer-menu-title">Want Fuel? – Contact Us Now! – <br><div class="footer-contact-text mb15"><a href="tel:0101250325" style="text-decoration: none; color: inherit;">010 125 0325</a></div>
                                    </h3>
