--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html data-wf-domain="" data-wf-page="62e11777b4bd5e48789c435a" data-wf-site="62e11777b4bd5e23589c4358">
     <head>
         <meta charset="utf-8"/>
-        <title>JJ-Energy | Home </title><meta name="description" content="JJ-Energy provides reliable fuel wholesale and distribution services across South Africa. High-quality petroleum products and logistics solutions." />
+        <title>JJ-Energy</title><meta name="description" content="JJ-Energy provides reliable fuel wholesale and distribution services across South Africa. High-quality petroleum products and logistics solutions." />
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <style>/* Mobile Failsafe: Ensures page is never stuck on blank/white */
             .page-wrapper { opacity: 1 !important; }
@@ -24,7 +24,7 @@
         <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="manifest" href="site.webmanifest">
+<link rel="manifest" href="./site.webmanifest">
         <script src="https://kit.fontawesome.com/7514502b33.js" crossorigin="anonymous"></script>
     </head>
     <body>
