update files add imgs

--- a/about us.html
+++ b/about us.html
@@ -9,8 +9,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
       
         <link href="assets/css/jj-e.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-K8LWb4/i3eVz+F12eIg45CzLjKwx0lBZpXfm2lDi0XjrxEIPQ93dzZxPP8kOVVCXpdy8E0Og+fWpIVa/ve1gUpA==" crossorigin="anonymous" />
-        <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
         <style>
             /* Mobile Failsafe: Ensures page is never stuck on blank/white */
             .page-wrapper { opacity: 1 !important; }
