--- a/contact us.html
+++ b/contact us.html
@@ -7,8 +7,7 @@
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         
         <link href="assets/css/jj-e.css" rel="stylesheet" type="text/css"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> 
-        <script src="https://forminit.com/sdk/v1/forminit.js"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" referrerpolicy="no-referrer" />   <script src="https://forminit.com/sdk/v1/forminit.js"></script>
 
         <style>
             
