--- a/index.html
+++ b/index.html
@@ -427,6 +427,12 @@ delivery as well as the quality of our products.
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62e11777b4bd5e23589c4358" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://assets.website-files.com/62e11777b4bd5e23589c4358/js/webflow.30821cfbf.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-    </body>
+  <script><script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('assets/java/sw.js');
+  }
+</script>
+</script>    
+</body>
 </html>
 
