--- a/about us.html
+++ b/about us.html
@@ -130,7 +130,7 @@
                             </div>
                             <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
+                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg , assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
                                 </div>
                             </div>
                             <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
