--- a/about us.html
+++ b/about us.html
@@ -9,7 +9,8 @@
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
       
         <link href="assets/css/jj-e.css" rel="stylesheet" type="text/css"/>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" referrerpolicy="no-referrer" />    <style>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
+        <style>
             /* Mobile Failsafe: Ensures page is never stuck on blank/white */
             .page-wrapper { opacity: 1 !important; }
             .navbar { background-color: #fff !important; }
@@ -130,7 +131,7 @@
                             </div>
                             <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
                                 <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
+                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-645.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
                                 </div>
                             </div>
                             <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
