update and upload files

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ delivery as well as the quality of our products.
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
   <script>
   if ('serviceWorker' in navigator)  {
-    navigator.serviceWorker.register('assets/java/sw.js');
+    navigator.serviceWorker.register('sw.js');
 }
 </script>    
 </body>
