--- a/contact us.html
+++ b/contact us.html
@@ -12,7 +12,7 @@
         <style>
             
             /* Mobile Failsafe: Ensures page is never stuck on blank/white */
-            .page-wrapper { opacity: 0 !important; }
+            .page-wrapper { opacity: 0 ; }
             .navbar { background-color: #fff !important; }
         
             /* Ensures navbar is solid and fixed like the About page */
