--- a/contact us.html
+++ b/contact us.html
@@ -24,7 +24,7 @@
                 z-index: 1000;
             }
             .page-wrapper {
-                opacity: 1 !important; 
+                opacity: 0; 
                 padding-top: 90px;
             }
             #result {
