--- a/contact us.html
+++ b/contact us.html
@@ -27,7 +27,7 @@
         </script>
     </head>
     <body>
-        <div class="page-load-cover-wrapper">
+       <div class="page-load-cover-wrapper">
             <div class="page-load-cover-right">
                 <div>
                     <div class="lodding-image two" data-w-id="54d697fb-5dab-e33d-b3b4-0c53f417dbd6" data-animation-type="lottie" data-src="https://assets.website-files.com/62e11777b4bd5e23589c4358/62f0e56a5514946ee9700a4d_lf30_editor_marnnkeq.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3.9166666666666665" data-duration="0"></div>
@@ -183,7 +183,14 @@
                 </div>
             </footer>
         </div>
- 
+ <div class="page-load-cover-wrapper">
+            <div class="page-load-cover-right">
+                <div>
+                    <div class="lodding-image two" data-w-id="54d697fb-5dab-e33d-b3b4-0c53f417dbd6" data-animation-type="lottie" data-src="https://assets.website-files.com/62e11777b4bd5e23589c4358/62f0e56a5514946ee9700a4d_lf30_editor_marnnkeq.json" data-loop="0" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3.9166666666666665" data-duration="0"></div>
+                </div>
+            </div>
+            <div class="page-load-cover"></div>
+        </div>
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js"></script>
         <script src="https://assets.website-files.com/62e11777b4bd5e23589c4358/js/webflow.30821cfbf.js"></script>
 
