--- a/contact us.html
+++ b/contact us.html
@@ -12,7 +12,7 @@
         <style>
             
             /* Mobile Failsafe: Ensures page is never stuck on blank/white */
-            .page-wrapper { opacity: 0 ; }
+            .page-wrapper { opacity:  !important; }
             .navbar { background-color: #fff !important; }
         
             /* Ensures navbar is solid and fixed like the About page */
@@ -24,7 +24,7 @@
                 z-index: 1000;
             }
             .page-wrapper {
-                opacity: 0; 
+                opacity: 1 !important; 
                 padding-top: 90px;
             }
             #result {
