update and upload files

--- a/jjoils.html
+++ b/jjoils.html
@@ -111,7 +111,7 @@
                             <div id="w-node-_1ab2a1ee-19b6-2409-2a0f-cf44f63623e2-789c435a" class="banner-right-content">
                                 <div class="banner-image-wrapper">
                                     <div class="banner-image-wrap">
-                                        <img src="assets\imgs\180971.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1425px" srcset="assets\imgs\180971.png 500w, assets\imgs\180971.png 800w, assets\imgs\180971.png 843w" alt="" class="banner-image"/>
+                                        <img src="assets\imgs\180971.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1425px" srcset="assets\imgs\180971.png 500w, assets\imgs\180971.png 800w, assets\imgs\180971.png 843w" alt="JJ oils truck Oil wholesaler & Distribution Company " class="banner-image"/>
                                      </div>
                                     <img src="https://assets.website-files.com/62e11777b4bd5e23589c4358/62e226b675f2c74d712cee69_Banner%20Image%20Shape.png" loading="lazy" sizes="100vw" srcset="https://assets.website-files.com/62e11777b4bd5e23589c4358/62e226b675f2c74d712cee69_Banner%20Image%20Shape-p-500.png 500w, https://assets.website-files.com/62e11777b4bd5e23589c4358/62e226b675f2c74d712cee69_Banner%20Image%20Shape-p-800.png 800w, https://assets.website-files.com/62e11777b4bd5e23589c4358/62e226b675f2c74d712cee69_Banner%20Image%20Shape.png 996w" alt="" class="banner-image-shape"/>
                                 </div>
