--- a/about us.html
+++ b/about us.html
@@ -14,6 +14,96 @@
             /* Mobile Failsafe: Ensures page is never stuck on blank/white */
             .page-wrapper { opacity: 1 !important; }
             .navbar { background-color: #fff !important; }
+
+            .gallery-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 180px);
+    grid-gap: 15px;
+    width: 100%;
+    max-width: 1200px;
+    margin: 40px auto;
+    position: relative;
+}
+
+/* --- THE BLUR FIX --- */
+/* This creates a blur wall that only appears when ANY input is checked */
+.gallery-container:has(input:checked)::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    z-index: 9998; /* Sits just below the expanded image */
+    pointer-events: none;
+}
+
+.gallery-container input { display: none; }
+
+.item {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    border-radius: 8px;
+    position: relative;
+    z-index: 1;
+}
+
+/* --- GRID POSITIONS --- */
+.item[for="item1"] { grid-column: 1 / span 2; grid-row: 1 / span 2; }
+.item[for="item10"] { grid-column: 3 / span 2; grid-row: 3 / span 2; }
+
+/* --- EXPANDED IMAGE (No Blur applied here) --- */
+.gallery-container input:checked + .item {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85vw;
+    height: 85vh;
+    z-index: 9999; /* Higher than the blur wall */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    filter: none !important; /* Forces the image to stay sharp */
+}
+
+/* Close Hint */
+.gallery-container input:checked + .item::before {
+    content: "✕ CLOSE";
+    position: absolute;
+    top: -45px;
+    right: 0;
+    color: #00a2ff;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.item:hover {
+    transform: scale(1.03);
+    outline: 2px solid #00a2ff;
+    z-index: 10;
+}
+
+@media (max-width: 800px) {
+    .gallery-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        grid-auto-rows: 150px;
+    }
+    .item[for="item1"], .item[for="item10"] {
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+}
         </style>
         <script type="text/javascript">
             !function(o, c) {
@@ -96,54 +186,37 @@
                                 We can also setup storage facilities on our client’s premises. JJ ENERGY can supply commercial and industrial based customers as well as the agricultural, mining, marine and aviation industry. We value professionalism in all we do. The company focuses on small, medium and big customers in South Africa and Export Markets.</p>
                         </div>
                     </div>
-                    <div class="about-story-wrapper">
-                        <div class="w-layout-grid about-story-image-grid">
-                            <div id="w-node-_862f2042-a8ab-e06b-40ff-597c41a41077-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper mb20">
-                                    <img src="assets/imgs/d8cb8588-9bf9-4d35-8b4a-8a258cab043d-removebg-preview.png4753efa0-b8e2-461f-93e4-36a3d8c9097e.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/bd9a20d4-16b3-448f-8d57-c137c17fc140.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                            </div>
-                            <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c.jpg" loading="lazy" srcset="assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c-p-500.jpg 500w, assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
-                                </div>
-                            </div>
-                            <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper mb20">
-                                    <img src="assets/imgs/trucks.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/940f5090-c1bd-4689-8908-74f19b14428a.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="w-layout-grid about-story-image-grid">
-                            <div id="w-node-_862f2042-a8ab-e06b-40ff-597c41a41077-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper mb20">
-                                    <img src="assets/imgs/d8cb8588-9bf9-4d35-8b4a-8a258cab043d.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/4ce5075f-70f3-4b39-9709-4b998930808f.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                            </div>
-                            <div id="w-node-d3f0be85-2b00-5b87-8212-06e5987de311-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg" loading="lazy" srcset="assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-500.jpg 500w, assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2-p-645.jpg 645w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 1919px) 97vw, 1320px" alt="" class="about-story-image height"/>
-                                </div>
-                            </div>
-                            <div id="w-node-_6f6ba149-6f1d-3e96-b2e6-dc6467707ffa-7e76962e" class="about-story-singel-wrapper">
-                                <div class="about-story-image-wrapper mb20">
-                                    <img src="assets/imgs/8fdd60cb-6ab3-4a50-86a5-681ef16f5fca.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                                <div class="about-story-image-wrapper">
-                                    <img src="assets/imgs/8905aa5a-76eb-412f-81cc-8450f47d07ef.jpg" loading="lazy" alt="" class="about-story-image"/>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                   <div class="gallery-container">
+    <input id="item1" type="checkbox">
+    <label for="item1" class="item big" style="background-image:url('assets/imgs/38dc19b4-3eac-49da-8d13-e32043da166c.jpg');"></label>
+
+    <input id="item2" type="checkbox">
+    <label for="item2" class="item small" style="background-image:url('assets/imgs/image.jpg');"></label>
+
+    <input id="item3" type="checkbox">
+    <label for="item3" class="item small" style="background-image:url('assets/imgs/IMG-20260205-WA0130.jpg');"></label>
+
+    <input id="item4" type="checkbox">
+    <label for="item4" class="item small" style="background-image:url('assets/imgs/trucks.jpg');"></label>
+
+    <input id="item5" type="checkbox">
+    <label for="item5" class="item small" style="background-image:url('assets/imgs/IMG-20260205-WA0131.jpg');"></label>
+
+    <input id="item6" type="checkbox">
+    <label for="item6" class="item small" style="background-image:url('assets/imgs/IMG-20260205-WA0141.jpg');"></label>
+
+    <input id="item7" type="checkbox">
+    <label for="item7" class="item small" style="background-image:url('assets/imgs/IMG-20260205-WA0151.jpg');"></label>
+
+    <input id="item8" type="checkbox">
+    <label for="item8" class="item small" style="background-image:url('assets/imgs/a9100ca0-bc4c-43e2-b3ea-e734b62b2cd2.jpg');"></label>
+
+    <input id="item9" type="checkbox">
+    <label for="item9" class="item small" style="background-image:url('assets/imgs/IMG-20260205-WA0133.jpg');"></label>
+
+    <input id="item10" type="checkbox">
+    <label for="item10" class="item big" style="background-image:url('assets/imgs/bd9a20d4-16b3-448f-8d57-c137c17fc140.jpg');"></label>
+</div>
                 </div>
                 <br>
                 <div class="container">
